fix description overflow

--- a/src/Card.css
+++ b/src/Card.css
@@ -1,31 +1,57 @@
 .card {
     display: flex;
-    width: 500px;
+    width: auto;
+    min-width: 200px;
+    max-width: 450px;
+    height: 80px;
     border-style: solid;
     border-width: 1px;
     padding: 5px;
     margin: 10px;
+    overflow:auto;
 }
 
 .columna-imagen {
-    flex: 1;
-    margin: auto;
-    height: 100%;
+    flex-shrink:initial;
+    flex: 1.2;
     margin-right: 5px;
+
+
 }
 
 .columna-titulo-descripcion {
+    height: auto;
     flex: 6;
+    margin: 0 5px 0 5px;
+}
+
+.columna-titulo-descripcion h1 {
+    margin: 0;
+}
+
+.componente-imagen img {
+    width: 80px;
 }
 
 .componente-titulo {
-    flex: 1;
-    color: blue;
-    margin-top: 0;
-    margin-bottom: 0;
+    word-wrap: unset;
+    word-break: unset;
+    overflow-wrap: unset;
+    white-space: nowrap;
+    min-width: fit-content;
+
+
 }
 
 .componente-descripcion {
-    flex: 1;
-    color: yellow;
+    word-wrap: unset;
+    word-break: unset;
+    overflow-wrap: unset;
+    white-space:unset; 
+
+
+}
+
+.componente-descripcion span {
+    z-index: -1;
 }
